logs/20260109_114543.log
Hello,DirectX!

clientSize:1280,720

Use Adapater:NVIDIA GeForce RTX 4060 Laptop GPU

FeatureLevel : 12.2

Complete create D3D12Device!!!

Begin CompileShader,path:Object3d.VS.hlsl,prefile:vs_6_0

Compile Succeeded,path:Object3d.VS.hlsl,profile:vs_6_0

Begin CompileShader,path:Object3d.PS.hlsl,prefile:ps_6_0

Object3d.PS.hlsl:70:34: error: use of undeclared identifier 'gCamera'
    float32_t3 toEye = normalize(gCamera.worldPosition - input.worldPosition);
                                 ^
Object3d.PS.hlsl:76:97: error: use of undeclared identifier 'cos'
    float32_t3 diffuse = gMaterial.color.rgb * textureColor.rgb * gDirectionalLight.color.rgb * cos * gDirectionalLight.intensity;
                                                                                                ^

